# ctf2

./: .gitignore  README.md
challenges/agentic_ai/: .env  Dockerfile  README.md  data_processing_script.py  flag.txt  harness.py  internal_forum.py  pyproject.toml  run.sh  sample_data.jsonl
challenges/embedding_inversion/: README.md  pyproject.toml  script.py  target.pt
challenges/llm_secret_extraction/: Dockerfile  app.py  flag.txt  index.html  pyproject.toml
challenges/pypi_hijack/: Dockerfile  README.md  flag.txt  loop.sh  pyproject_postfix.txt  run.sh
challenges/voice_fake/: .dockerignore  Dockerfile  README.md  answer_file.pkl  challenge.py  index.html  pyproject.toml  scratch.ipynb
challenges/voice_fake/data/: index.html
challenges/voice_fake/solution/: main.py  pyproject.toml
