[project]
name = "embedding-inversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
